// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fields with a field that links to a field with empty string value 1`] = `
<div>
  <div
    className="field field-link-to-next"
  >
    <label>
      Foo
    </label>
    <div>
      {"id":"foo","label":"Foo","linkToNext":true,"disabled":false,"fieldId":"foo","rowId":"data","value":""}
    </div>
  </div>
  <div
    className="field field-link-to-prev"
  >
    <label>
      Bar
    </label>
    <div>
      {"id":"bar","label":"Bar","linkToPrev":true,"disabled":true,"fieldId":"bar","rowId":"data"}
    </div>
  </div>
</div>
`;

exports[`Fields with a field that links to a field with no value 1`] = `
<div>
  <div
    className="field field-link-to-next"
  >
    <label>
      Foo
    </label>
    <div>
      {"id":"foo","label":"Foo","linkToNext":true,"disabled":false,"fieldId":"foo","rowId":"data","value":null}
    </div>
  </div>
  <div
    className="field field-link-to-prev"
  >
    <label>
      Bar
    </label>
    <div>
      {"id":"bar","label":"Bar","linkToPrev":true,"disabled":true,"fieldId":"bar","rowId":"data"}
    </div>
  </div>
</div>
`;

exports[`Fields with a field that links to a field with undefined value 1`] = `
<div>
  <div
    className="field field-link-to-next"
  >
    <label>
      Foo
    </label>
    <div>
      {"id":"foo","label":"Foo","linkToNext":true,"disabled":false,"fieldId":"foo","rowId":"data"}
    </div>
  </div>
  <div
    className="field field-link-to-prev"
  >
    <label>
      Bar
    </label>
    <div>
      {"id":"bar","label":"Bar","linkToPrev":true,"disabled":true,"fieldId":"bar","rowId":"data"}
    </div>
  </div>
</div>
`;

exports[`Fields with a fields that link to each other 1`] = `
<div>
  <div
    className="field field-link-to-next"
  >
    <label>
      Foo
    </label>
    <div>
      {"id":"foo","label":"Foo","linkToNext":true,"disabled":false,"fieldId":"foo","rowId":"data_id","value":"foo_value"}
    </div>
  </div>
  <div
    className="field field-link-to-prev"
  >
    <label>
      Bar
    </label>
    <div>
      {"id":"bar","label":"Bar","linkToPrev":true,"disabled":false,"fieldId":"bar","rowId":"data_id","value":"bar_value"}
    </div>
  </div>
</div>
`;

exports[`Fields with a list of fields 1`] = `
<div>
  <div
    className="field"
  >
    <label>
      Foo
    </label>
    <div>
      {"id":"foo","label":"Foo","disabled":false,"fieldId":"foo","rowId":"data_id","value":"foo_value"}
    </div>
  </div>
  <div
    className="field"
  >
    <label>
      Bar
    </label>
    <div>
      {"id":"bar","label":"Bar","disabled":false,"fieldId":"bar","rowId":"data_id","value":"bar_value"}
    </div>
  </div>
</div>
`;

exports[`Fields with a not updateable field 1`] = `
<div>
  <div
    className="field"
  >
    <label>
      Foo
    </label>
    <span
      className="cannot-update"
    >
      Field cannot be changed
    </span>
    <div>
      {"id":"foo","label":"Foo","updateable":false,"disabled":true,"fieldId":"foo","rowId":"data_id","value":"foo_value"}
    </div>
  </div>
  <div
    className="field"
  >
    <label>
      Bar
    </label>
    <div>
      {"id":"bar","label":"Bar","disabled":false,"fieldId":"bar","rowId":"data_id","value":"bar_value"}
    </div>
  </div>
</div>
`;

exports[`Fields with a selected field 1`] = `
<div>
  <div
    className="field field-highlighted"
  >
    <label>
      Foo
    </label>
    <div>
      {"id":"foo","label":"Foo","disabled":false,"fieldId":"foo","rowId":"data_id","value":"foo_value"}
    </div>
  </div>
  <div
    className="field"
  >
    <label>
      Bar
    </label>
    <div>
      {"id":"bar","label":"Bar","disabled":false,"fieldId":"bar","rowId":"data_id","value":"bar_value"}
    </div>
  </div>
</div>
`;

exports[`Fields with an empty list of fields 1`] = `<div />`;
